--- a/apps/contact_form/style.css
+++ b/apps/contact_form/style.css
@@ -9,6 +9,12 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
+    background-image: url("background.jpg");
+    background-size: 120%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
 label {
@@ -34,7 +40,7 @@ input {
 .mailer {
     display: flex;
     justify-content: center;
-    background-color: bisque;
+    align-self: center;
 }
 
 .mail {
@@ -63,4 +69,40 @@ input {
     display: none;
 }
 
+.boxformessage {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color:rgba(0, 0, 0, 0.5);
+}
+
+.messageafterformsend {
+    width: 500px;
+    height: 400px;
+    background-color: #f3f3f3;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    z-index: 9999;
+    justify-content: space-between;
+}
+
+.messageafterformsend p {
+    padding-top: 200px;
+    align-self: center;
+}
+
+.messageafterformsend a {
+    padding: 0 10px 10px 0;
+    text-decoration: none;
+    align-self: flex-end;
+    color: #0FB1BE;
+}
+
+.bakgroundformessage {
+    backdrop-filter: blur(2px);
+    width: 100%;
+    height: 100vh;
+}
 /* error color: #D04127 */
