--- a/apps/contact_form/style.css
+++ b/apps/contact_form/style.css
@@ -105,4 +105,10 @@ input {
     width: 100%;
     height: 100vh;
 }
-/* error color: #D04127 */
+
+form div {
+    display: none;
+    font-size: 12px;
+    height: 20px;
+    color: #D04127;
+}
